--- a/index.html
+++ b/index.html
@@ -1,88 +1,97 @@
 <html>
-	<head>
-		<title>OpenTripPlanner API Compare</title>
-        <link href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.5/slate/bootstrap.min.css" rel="stylesheet">
-	</head>
-	<body>
-	    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-	        <div class="container">
-	            <div class="navbar-header">
-	                <a class="navbar-brand" href="#">OpenTripPlanner API Compare</a>
-	            </div>
-	        </div>
-	    </div>
-        <div id="endpoints" class="container">
-	        <!--h2>Endpoint A</h2>
-	        <div class="row">
-	        	<div class="col-sm-6">
-	        		<h3>Version 1</h3>
-	        		<h4>Request</h4>
-	        		<pre>This is a request</pre>
-	        		<h4>Response</h4>
-	        		<pre>This is a response</pre>
-	        	</div>
-	        	<div class="col-sm-6">
-	        		<h3>Version 2</h3>
-		    		<h4>Request</h4>
-		    		<pre>This is a request</pre>
-		    		<h4>Response</h4>
-		    		<pre>This is a response</pre>
-		    	</div>
-	    	</div-->
-    	</div>
-	    <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
-	    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-		<script>
-			var services = [{
-				version: "OTP v.0.11 (TMB API)",
-				baseUrl: "http://api.tmb.cat/v1/planner/"
-			},{
-				version: "OTP v.0.18",
-				baseUrl: "http://demo.geomati.co:8088/otp/routers/default/"
-			}]
+<head>
+	<title>OpenTripPlanner API Compare</title>
+	<link href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.5/slate/bootstrap.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://raw.githubusercontent.com/isagalaev/highlight.js/master/src/styles/railscasts.css">
+	<style>
+		h2 {
+			padding-top: 60px;
+		}
+	</style>
+</head>
+<body>
+	<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="#">OpenTripPlanner API Compare</a>
+			</div>
+			<div class="navbar-collapse collapse">
+				<ul class="nav navbar-nav pull-right">
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Endpoints <b class="caret"></b></a>
+						<ul id="endpoint-menu" class="dropdown-menu dropdown-menu-right">
+						</ul>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div id="endpoints" class="container-fluid">
+	</div>
+	<script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
+	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.6/highlight.min.js"></script>
+	<script>
+		var services = [{
+			version: "OTP v.0.11 (TMB API)",
+			baseUrl: "http://api.tmb.cat/v1/planner/"
+		},{
+			version: "OTP v.0.18",
+			baseUrl: "http://demo.geomati.co:8088/otp/routers/default/"
+		}]
 
-		    $.ajax({
-                url: "endpoints.json"
-            }).then(
-	            parseEndpoints
-	        );
+		$.ajax({
+			url: "endpoints.json"
+		}).then(
+		parseEndpoints
+		);
 
-            function parseEndpoints(endpoints) {
-            	for(var e=0; e<endpoints.length; e++) {
-            		var endpoint = endpoints[e];
-            		var html = '<h2>'+endpoint.name+'</h2> \
-				        <div class="row" id="endpoint-'+e+'"> \
-				    	</div>';
-				    $('#endpoints').append(html);
-				    for(var r=0; r<endpoint.requests.length; r++) {
-            			var request = endpoint.requests[r];
-			        	var html = '<div class="col-sm-6"> \
-			        		<h3>'+services[r].version+'</h3> \
-			        		<h4>Request</h4> \
-			        		<pre>'+ JSON.stringify(request, null, 3) +'</pre> \
-			        		<h4>Response</h4> \
-			        		<pre id="response-'+e+'-'+r+'"></pre> \
-			        	</div>';
-			        	$('#endpoint-'+e).append(html);
-            			$.ajax({
-            				url: services[r].baseUrl + request.url,
-            				data: request.data,
-            				context: {
-            					e: e,
-            					r: r
-            				}
-            			}).then(function(response) {
-            				var el = $('#response-'+this.e+'-'+this.r);
-            				el.css("color", "green");
-            				el.append(JSON.stringify(response, null, 3));
-            			}, function(error) {
-            				var el = $('#response-'+this.e+'-'+this.r);
-            				el.css("color", "red");
-            				el.append(JSON.stringify(error, null, 3));
-            			});
-            		}     		
-            	}
-            }
-		</script>
-    </body>
+		function parseEndpoints(endpoints) {
+			var menu = "";
+			for(var e=0; e<endpoints.length; e++) {
+				var endpoint = endpoints[e];
+				var html = '<h2 id="header'+e+'">'+endpoint.name+'</h2> \
+				<div class="row" id="endpoint-'+e+'"> \
+				</div>';
+				$('#endpoints').append(html);
+				$('#endpoint-menu').append('<li><a href="#header'+e+'">'+endpoint.name+'</a></li>');
+				for(var r=0; r<endpoint.requests.length; r++) {
+					var request = endpoint.requests[r];
+					var html = '<div class="col-sm-6"> \
+					<h3>'+services[r].version+'</h3> \
+					<h4>Request</h4> \
+					<pre id="request-'+e+'-'+r+'">'+ JSON.stringify(request, null, 3) +'</pre> \
+					<h4>Response</h4> \
+					<pre id="response-'+e+'-'+r+'"></pre> \
+				</div>';
+				$('#endpoint-'+e).append(html);
+				hljs.highlightBlock(document.getElementById('request-'+e+'-'+r));
+				$.ajax({
+					url: services[r].baseUrl + request.url,
+					data: request.data,
+					context: {
+						e: e,
+						r: r
+					}
+				}).then(function(response) {
+					var el = $('#response-'+this.e+'-'+this.r);
+					el.append(JSON.stringify(response, null, 3));
+					hljs.highlightBlock(el.get(0));
+				}, function(error) {
+					var el = $('#response-'+this.e+'-'+this.r);
+					el.append(JSON.stringify(error, null, 3));
+					el.addClass("hljs");
+					el.css("color", "red");
+				});
+			}
+		}
+	}
+</script>
+</body>
 </html>
