--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 	<title>OpenTripPlanner API Compare</title>
-	<link href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.5/slate/bootstrap.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="https://raw.githubusercontent.com/isagalaev/highlight.js/master/src/styles/railscasts.css">
+	<link href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.5/slate/bootstrap.min.css" rel="stylesheet"/>
+	<link rel="stylesheet" href="https://raw.githubusercontent.com/isagalaev/highlight.js/master/src/styles/railscasts.css"/>
 	<style>
 		h2 {
 			padding-top: 60px;
@@ -32,6 +32,31 @@
 			</div>
 		</div>
 	</div>
+	<div class="container-fluid">
+		<h2>Adreces i documentació de les APIs</h2>
+		<div class="row">
+			<div class="col-sm-6">
+				<h3>OTP v.0.11 (TMB API)</h3>
+				<dl class="dl-horizontal">
+					<dt>Base URL</dt>
+					<dd><a href="http://api.tmb.cat/v1/planner/?app_key=cb2fc6155198c620d9d6f454d4a6ef69&amp;app_id=b53a5765" target="_blank">http://api.tmb.cat/v1/planner/</a></dd>
+					<dt>API docs</dt>
+					<dd><a href="https://developer.tmb.cat/api/v1/docs/planner" target="_blank">https://developer.tmb.cat/api/v1/docs/planner</a></dd>
+				</dl>
+			</div>
+			<div class="col-sm-6">
+				<h3>OTP v.0.18</h3>
+				<dl class="dl-horizontal">
+					<dt>Base URL</dt>
+					<dd><a href="http://demo.geomati.co:8088/otp/routers/bcn/" target="_blank">http://demo.geomati.co:8088/otp/routers/bcn/</a></dd>
+					<dt>API docs (0.15)</dt>
+					<dd><a href="http://dev.opentripplanner.org/apidoc/0.15.0/" target="_blank">http://dev.opentripplanner.org/apidoc/0.15.0/</a></dd>
+					<dt>API docs (0.18 <a href="http://demo.geomati.co:8088/otp/application.wadl" target="_blank">wadl</a>)</dt>
+					<dd><a href="application.wadl.xml" target="_blank">application.wadl.xml (rendered as HTML)</a></dd>
+				</dl>
+			</div>
+		</div>
+	</div>
 	<div id="endpoints" class="container-fluid">
 	</div>
 	<script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
@@ -43,7 +68,7 @@
 			baseUrl: "http://api.tmb.cat/v1/planner/"
 		},{
 			version: "OTP v.0.18",
-			baseUrl: "http://demo.geomati.co:8088/otp/routers/default/"
+			baseUrl: "http://demo.geomati.co:8088/otp/routers/bcn/"
 		}]
 
 		$.ajax({
@@ -63,6 +88,7 @@
 				$('#endpoint-menu').append('<li><a href="#header'+e+'">'+endpoint.name+'</a></li>');
 				for(var r=0; r<endpoint.requests.length; r++) {
 					var request = endpoint.requests[r];
+					request.url =  services[r].baseUrl + request.url;
 					var html = '<div class="col-sm-6"> \
 					<h3>'+services[r].version+'</h3> \
 					<h4>Request</h4> \
@@ -72,14 +98,8 @@
 				</div>';
 				$('#endpoint-'+e).append(html);
 				hljs.highlightBlock(document.getElementById('request-'+e+'-'+r));
-				$.ajax({
-					url: services[r].baseUrl + request.url,
-					data: request.data,
-					context: {
-						e: e,
-						r: r
-					}
-				}).then(function(response) {
+				request.context = { e: e, r: r };
+				$.ajax(request).then(function(response) {
 					var el = $('#response-'+this.e+'-'+this.r);
 					el.append(JSON.stringify(response, null, 3));
 					hljs.highlightBlock(el.get(0));
