Use TMB API v2 endpoint

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<h2>Adreces i documentació de les APIs</h2>
 		<div class="row">
 			<div class="col-sm-6">
-				<h3>OTP v.0.11 (TMB API)</h3>
+				<h3>TMB API v1 (OTP v.0.11)</h3>
 				<dl class="dl-horizontal">
 					<dt>Base URL</dt>
 					<dd><a href="http://api.tmb.cat/v1/planner/?app_key=cb2fc6155198c620d9d6f454d4a6ef69&amp;app_id=b53a5765" target="_blank">http://api.tmb.cat/v1/planner/</a></dd>
@@ -45,10 +45,10 @@
 				</dl>
 			</div>
 			<div class="col-sm-6">
-				<h3>OTP v.0.18</h3>
+				<h3>TMB API v2 (OTP v.0.18)</h3>
 				<dl class="dl-horizontal">
 					<dt>Base URL</dt>
-					<dd><a href="http://demo.geomati.co:8088/otp/routers/bcn/" target="_blank">http://demo.geomati.co:8088/otp/routers/bcn/</a></dd>
+					<dd><a href="http://api.tmb.cat/v2/planner/?app_key=cb2fc6155198c620d9d6f454d4a6ef69&amp;app_id=b53a5765" target="_blank">http://api.tmb.cat/v2/planner/</a></dd>
 					<dt>0.18 API (from <a href="http://demo.geomati.co:8088/otp/application.wadl" target="_blank">wadl</a>)</dt>
 					<dd><a href="application.wadl.xml" target="_blank">application.wadl.xml (rendered as HTML)</a></dd>
 					<dt>0.15 docs</dt>
@@ -64,11 +64,11 @@
 	<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.6/highlight.min.js"></script>
 	<script>
 		var services = [{
-			version: "OTP v.0.11 (TMB API)",
+			version: "TMB API v1 (OTP v.0.11)",
 			baseUrl: "http://api.tmb.cat/v1/planner/"
 		},{
-			version: "OTP v.0.18",
-			baseUrl: "http://demo.geomati.co:8088/otp/routers/bcn/"
+			version: "TMB API v2 (OTP v.0.18)",
+			baseUrl: "http://api.tmb.cat/v2/planner/"
 		}]
 
 		$.ajax({
