Add link to Planner input parameter description

--- a/index.html
+++ b/index.html
@@ -49,10 +49,12 @@
 				<dl class="dl-horizontal">
 					<dt>Base URL</dt>
 					<dd><a href="http://api.tmb.cat/v2/planner/?app_key=cb2fc6155198c620d9d6f454d4a6ef69&amp;app_id=b53a5765" target="_blank">http://api.tmb.cat/v2/planner/</a></dd>
+					<dt>0.15 API docs</dt>
+					<dd><a href="http://dev.opentripplanner.org/apidoc/0.15.0/" target="_blank">http://dev.pentripplanner.org/apidoc/0.15.0/</a></dd>
 					<dt>0.18 API (from <a href="http://demo.geomati.co:8088/otp/application.wadl" target="_blank">wadl</a>)</dt>
 					<dd><a href="application.wadl.xml" target="_blank">application.wadl.xml (rendered as HTML)</a></dd>
-					<dt>0.15 docs</dt>
-					<dd><a href="http://dev.opentripplanner.org/apidoc/0.15.0/" target="_blank">http://dev.opentripplanner.org/apidoc/0.15.0/</a></dd>
+					<dt>Plan input parameters</dt>
+					<dd><a href="https://github.com/geomatico/otp-api-diff/blob/gh-pages/OTP-0.18-PlannerQueryParams.md" target="_blank">https://github.com/geomatico/otp-api-diff/blob/gh-pages/OTP-0.18-PlannerQueryParams.md</a></dd>
 				</dl>
 			</div>
 		</div>
